newscard layout bug fix

--- a/blocks/data-cards/data-cards.css
+++ b/blocks/data-cards/data-cards.css
@@ -447,6 +447,12 @@
     justify-content: space-between;
   }
 
+  .data-cards.news-card-variation {
+    display: grid;
+    grid-template-columns: 30% 55%;
+    justify-content: space-between;
+  }
+
   .data-cards.data-card-variation .rte-container {
     display: flex;
     flex-direction: column;
@@ -486,9 +492,13 @@
     flex-basis: 60%;
   }
 
+  .data-cards.news-card-variation .news-card{
+    padding-bottom: var(--spacing-medium);
+  }
+
   .data-cards.news-card-variation .news-card-items a:not(:first-child) .news-card {
     display: grid;
-    grid-template-columns: 2fr 25%;
+    grid-template-columns: auto 30%;
     grid-template-rows: auto auto;
     padding-top: var(--spacing-medium);
     /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
@@ -496,16 +506,17 @@
         "tag image"
         "title image";
     column-gap: var(--spacing-large);
-    align-items: center;
   }
 
   .data-cards a:not(:first-child) .news-card-tag {
     grid-area: tag;
+    align-self: flex-end;
   }
 
   .data-cards a .news-card .news-card-title {
     font-size: var(--font-size-700);
-    margin-bottom: var(--spacing-medium);
+    margin-bottom: var(--spacing-none);
+    align-self: flex-start;
   }
 
   .data-cards a:not(:first-child) .news-card-title {
@@ -515,6 +526,14 @@
   .data-cards a:not(:first-child) .news-card-image {
     grid-area: image;
     align-self: center;
+    margin-bottom: var(--spacing-none);
+    width: 100%;
+  }
+
+  .data-cards a:not(:first-child) .news-card-image  img{
+    align-self: center;
+    width: 100%;
+    max-width: 248px;
   }
 
   .data-cards.news-card-variation .rte-container {
